<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SpartaMarket</string>
    <string name="main_mypage">mypage</string>
    <string name="main_login">login</string>
    <string name="main_category">categoty</string>
    <string name="main_category_window">Window</string>
    <string name="main_category_mac">Mac</string>
    <string name="main_product_list">product List</string>
    <string name="detail_choose_product_description">Product Description</string>
    <string name="detail_purchase">Purchase Now</string>
    <string name="detail_basket">Add Basket</string>
    <string name="detail_back">Back</string>
    <string name="login_passhint">Please enter your PIN number.</string>
    <string name="login_signin">Login</string>
    <string name="login_idhint">Please enter your ID.</string>
    <string name="login_signup">SignUp</string>
    <string name="login_text">Login screen</string>
    <string name="login_market">Sparta Market</string>
    <string name="toast_err">Please check ID/password.</string>
    <string name="toast_login">Login Successful</string>
    <string name="window1">Asus Vivobook Go 15</string>
    <string name="window1_des">CPUmodel-Ryzen5, SSD-256GB, RAM-16GB, OS-Free DOS</string>
    <string name="window2">Lenovo Ideapad Slim1 15IJL7 15.6</string>
    <string name="window2_des">CPUmodel-Celeron, SSD-128GB, RAM-4GB, OS-WIN11Home</string>
    <string name="window3">13 Notebook Windows 10</string>
    <string name="window3_des">CPU-Intel Core i5-10210u i7-10510u  RAM-DDR4  SSD-512GB, RAM-DDR4 8GB, OS-Window10</string>
    <string name="window4">Samsung 2021Notebook Plus2 15.6</string>
    <string name="window4_des">CPUmodel-Pentium, SSD-NVMe256GB, RAM-8GB, OS-WIN10Pro, model-NT550XDA-K24AW</string>
    <string name="window5">TOPTON Ultra Gaming Notebook</string>
    <string name="window5_des">CPUmodel-Ryzen, SSD-2TB, RAM-36GB, OS-Free DOS</string>
    <string name="mac1">Apple 2020 Mac Air 13</string>
    <string name="mac1_des">CPUmodel-M1, SSD-256GB, RAM-8GB</string>
    <string name="mac2">Apple 2022 Mac Air 13 M2</string>
    <string name="mac2_des">CPUmodel-M2 8core, GPUmodel-GPU 8core, SSD-256GB, RAM-8GB</string>
    <string name="mac3">Apple 2022 Mac Pro 13 M2</string>
    <string name="mac3_des">CPUmodel-M2, GPUmodel-GPU 10core, SSD-256GB, RAM-8GB</string>
    <string name="mac4">Apple 2021 Mac Pro 16</string>
    <string name="mac4_des">CPUmodel-M1 Pro10core, GPUmodel-GPU 16core, SSD-1024GB, RAM-16GB</string>
    <string name="mac5">Apple 2021 Mac Pro 14</string>
    <string name="mac5_des">CPUmode-M1 Pro8core, GPU model-GPU 14core, SSD-512GB, RAM-16GB</string>
    <string name="signup_login">Login</string>
    <string name="signup_information">Please enter member information</string>
    <string name="signup_email">Id(Email)</string>
    <string name="signup_password">Password</string>
    <string name="signup_password_check">Password Check</string>
    <string name="signup_name">Name</string>
    <string name="signup_phone_num">Phone Number</string>
    <string name="signup_check">We\'ve all checked and agree.</string>
    <string name="signup_check_detail">The full consent includes consent to the required and optional information, and you can choose consent individually.</string>
    <string name="signup_signup_btn">SignUp</string>
    <string name="mypage_name">Name</string>
    <string name="mypage_email">Email</string>
    <string name="mypage_basket">Basket</string>
    <string name="mypage_purchase_product">Order</string>
    <string name="mypage_logout_btn">Sign Out</string>
    <string name="mypage_purchase_btn">Purchase</string>
    <string name="main_need_login">Login Please</string>
    <string name="mypage_order_complete">Order Finished</string>
    <string name="mypage_logout_finish">Logout Complete</string>
    <string name="mypage_empty_basket">Your shopping cart is empty</string>
    <string name="signup_signup_signup_success">I have been registered as a member of Sparta Market normally.</string>
    <string name="signup_signup_fill_empty_area">Please fill in all the blanks.</string>
    <string name="signup_signup_agree_checkbox">Please agree to the terms and conditions.</string>
    <string name="signup_email_format">"Please enter it in email format.  "</string>
    <string name="signup_password_fail">"The password does not match.  "</string>
    <string name="signup_password_over_six">"Please enter a password of at least 6 characters.  "</string>
    <string name="signup_password_special">"Please include special characters in your password.  "</string>

</resources>