<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.widget.Button
        android:id="@+id/mypage_btn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:layout_margin="20dp"
        android:text="@string/main_mypage"
        android:visibility="visible"
        style="@style/MyButton"
        app:layout_constraintEnd_toStartOf="@+id/login_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/login_btn"
        style="@style/MyButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:layout_margin="20dp"
        android:text="@string/main_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/categoryLayout"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/border_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mypage_btn">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/main_category"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_mac"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:onClick="productChange"
                    android:src="@drawable/category_mac_selector"
                    android:background="@drawable/circular_background"
                    android:scaleType="centerCrop"
                    android:clipToOutline="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_category_mac"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_window"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:onClick="productChange"
                    android:src="@drawable/category_window_selector"
                    android:background="@drawable/circular_background"
                    android:scaleType="centerCrop"
                    android:clipToOutline="true"/>
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_category_window"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/productListLayout"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/border_background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryLayout">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/main_product_list"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryLayout" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:layout_margin="10dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <LinearLayout
                android:id="@+id/productListInnerLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

            </LinearLayout>


        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>