<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/border_background"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/chooseProductImg"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:transitionName="productImgTran"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/chooseProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:transitionName="productNameTran"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/chooseProductImg"
            app:layout_constraintStart_toStartOf="@+id/chooseProductImg"
            app:layout_constraintTop_toBottomOf="@+id/chooseProductImg" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/detail_choose_product_description"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chooseProductImg" />

        <TextView
            android:id="@+id/chooseProductDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <android.widget.Button
            android:id="@+id/btn_basket"
            style="@style/MyButton"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:text="@string/detail_basket"
            app:layout_constraintBottom_toBottomOf="@+id/btn_purchase"
            app:layout_constraintEnd_toStartOf="@+id/btn_purchase"
            app:layout_constraintTop_toTopOf="@+id/btn_purchase" />

        <android.widget.Button
            android:id="@+id/btn_purchase"
            style="@style/MyButton"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/detail_purchase"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/chooseProductDes"
            app:layout_constraintTop_toBottomOf="@+id/chooseProductDes" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <android.widget.Button
        android:id="@+id/btn_cancle"
        style="@style/MyButton"
        android:text="@string/detail_back"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
